--- a/research/index.html
+++ b/research/index.html
@@ -358,7 +358,7 @@ StatCounter"></a></div></noscript>
   <div class="article-style" itemprop="articleBody">
 
 <p><strong><a href="davila_korinek_pecuniary.pdf" target="_blank">Pecuniary Externalities in Economies with Financial Frictions</a></strong>, with Anton Korinek.<br />
-<em>The Review of Economic Studies</em>, Volume 85, Issue 1, 1 January 2018, Pages 352–395. <strong><a href="https://doi.org/10.1093/restud/rdx010" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_korinek_pecuniary.txt" target="_blank">BibTeX</a></strong><br />
+<em>The Review of Economic Studies</em>, Volume 85, Issue 1, 1 January 2018, Pages 352–395. <strong><a href="https://doi.org/10.1093/restud/rdx010" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_korinek_pecuniary.txt" target="_blank">BibTeX</a></strong>.<br />
 <sub> This paper was previously circulated as &ldquo;Fire-Sale Externalities&rdquo;. It subsumes my earlier working paper &ldquo;<a href="davila_dissecting.pdf" target="_blank">Dissecting Fire Sales Externalities</a>&rdquo;. <sub></p>
 
 <p><strong><a href="bdks_beliefs_leverage.pdf" target="_blank">House Price Beliefs and Mortgage Leverage Choice</a></strong>, with Michael Bailey, Theresa Kuchler, and Johannes Stroebel. <em>The Review of Economic Studies</em>, Volume 86, Issue 6, November 2019, Pages 2403–2452. <strong><a href="https://doi.org/10.1093/restud/rdy068" target="_blank">Link</a></strong>, <strong><a href="bibtex/bdks_beliefs_leverage.txt" target="_blank">BibTeX</a></strong>.</p>
@@ -367,15 +367,15 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_walther_bailouts.pdf" target="_blank">Does Size Matter? Bailouts with Large and Small Banks</a></strong>, with Ansgar Walther. <em>Journal of Financial Economics</em>, Volume 136, Issue 1, April 2020, Pages 1–22. <strong><a href="https://doi.org/10.1016/j.jfineco.2019.09.005" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_walther_bailouts.txt" target="_blank">BibTeX</a></strong>.</p>
 
-<p><strong><a href="davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational Efficiency</a></strong>, with Cecilia Parlatore. <em>The Journal of Finance</em>, Volume 76, Issue 3, June 2021, Pages 1471-1539. <strong><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/jofi.13008" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_parlatore_trading_costs.txt" target="_blank">BibTeX</a></strong></p>
+<p><strong><a href="davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational Efficiency</a></strong>, with Cecilia Parlatore. <em>The Journal of Finance</em>, Volume 76, Issue 3, June 2021, Pages 1471-1539. <strong><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/jofi.13008" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_parlatore_trading_costs.txt" target="_blank">BibTeX</a></strong>.</p>
 
 <h1 id="under-revision">Under Revision</h1>
+
+<p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>, August 2021</p>
 
 <p><strong><a href="davila_goldstein_optimal_di.pdf" target="_blank">Optimal Deposit Insurance</a></strong>, with Itay Goldstein, April 2021</p>
 
 <p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore, January 2021. Code and data are available <strong><a href="https://github.com/edavila/volatility_informativeness" target="_blank">here</a></strong>.</p>
-
-<p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>, September 2020</p>
 
 <p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Ben Hébert, June 2020</p>
 
