--- a/research/index.html
+++ b/research/index.html
@@ -375,7 +375,7 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Ben Hébert, October 2021</p>
 
-<p><strong><a href="davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect Instruments</a></strong>, with Ansgar Walther, August 2021</p>
+<p><strong><a href="davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with Distorted Beliefs</a></strong>, with Ansgar Walther, May 2021</p>
 
 <p><strong><a href="davila_goldstein_optimal_di.pdf" target="_blank">Optimal Deposit Insurance</a></strong>, with Itay Goldstein, April 2021</p>
 
@@ -383,11 +383,13 @@ StatCounter"></a></div></noscript>
 
 <h1 id="working-papers">Working Papers</h1>
 
+<p><strong><a href="davila_schaab_timeless_primal_dual.pdf" target="_blank">Optimal Monetary Policy with Heterogeneous Agents: A Timeless Primal-Dual Approach</a></strong>, with Andreas Schaab, March 2022</p>
+
 <p><strong><a href="davila_graves_parlatore_value_arbitrage.pdf" target="_blank">The Value of Arbitrage</a></strong>, with Daniel Graves and Cecilia Parlatore, February 2022</p>
 
 <p><strong><a href="davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with Heterogeneous Individuals</a></strong>, with Andreas Schaab, December 2021</p>
 
-<p><strong><a href="davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with Distorted Beliefs</a></strong>, with Ansgar Walther, May 2021</p>
+<p><strong><a href="davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect Instruments</a></strong>, with Ansgar Walther, August 2021</p>
 
 <p><strong><a href="davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, February 2021. Code and data are available <strong><a href="https://github.com/edavila/identifying_price_informativeness" target="_blank">here</a></strong>.</p>
 
