--- a/research/index.html
+++ b/research/index.html
@@ -383,7 +383,7 @@ StatCounter"></a></div></noscript>
 
 <h1 id="working-papers">Working Papers</h1>
 
-<p><strong><a href="davila_schaab_timeless_primal_dual.pdf" target="_blank">Optimal Monetary Policy with Heterogeneous Agents: A Timeless Primal-Dual Approach</a></strong>, with Andreas Schaab, March 2022</p>
+<p><strong><a href="davila_schaab_timeless_ramsey.pdf" target="_blank">Optimal Monetary Policy with Heterogeneous Agents: A Timeless Ramsey Approach</a></strong>, with Andreas Schaab, March 2022</p>
 
 <p><strong><a href="davila_graves_parlatore_value_arbitrage.pdf" target="_blank">The Value of Arbitrage</a></strong>, with Daniel Graves and Cecilia Parlatore, February 2022</p>
 
