--- a/research/index.html
+++ b/research/index.html
@@ -371,13 +371,13 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>. <em>The Journal of Finance</em>, November 2021. Forthcoming. <strong><a href="bibtex/davila_optimal_ftt.txt" target="_blank">BibTeX</a></strong>.</p>
 
+<p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Benjamin Hébert. <em>The Review of Economic Studies</em>, July 2022. Forthcoming. <strong><a href="bibtex/davila_hebert_optimal_corporate_taxation.txt" target="_blank">BibTeX</a></strong>.</p>
+
 <h1 id="under-revision">Under Revision</h1>
 
 <p><strong><a href="davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with Distorted Beliefs</a></strong>, with Ansgar Walther, June 2022</p>
 
 <p><strong><a href="davila_goldstein_optimal_di.pdf" target="_blank">Optimal Deposit Insurance</a></strong>, with Itay Goldstein, May 2022</p>
-
-<p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Ben Hébert, October 2021</p>
 
 <p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore, January 2021. Code and data are available <strong><a href="https://github.com/edavila/volatility_informativeness" target="_blank">here</a></strong>.</p>
 
